--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
     </ul>
     
-<h3> <a href="diretrizes.html">Clique aqui para conferir os princípios organizativos do Sistema, também chamadas de Diretrizes! </a> </h3>
+<h3> <a href="diretrizes.html">Clique aqui para conferir os princípios organizativos do Sistema, também chamados de Diretrizes! </a> </h3>
 
 </body>
 
