tentando encontrar o erro no link interno 2

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
 <h3> <a href="diretrizes.html">Clique aqui para conferir os princípios organizativos do Sistema, também chamados de Diretrizes! </a> </h3>
 
-<h3> Que o Brasil é referência em Imunizacão você já sabe, mas confira agora <a href="imunizacao.html" dados sobre as doses aplicadas no último ano></a>, em 2023! </h3>
+<h3> Que o Brasil é referência em Imunizacão você já sabe, mas confira agora <a href="imunizacao.html" dados sobre as doses aplicadas no último ano>, em 2023! </h3> </a>
 
 </body>
 
