adicao de imagem no h2 index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </h1>
     
     <h2> Aqui você encontra algumas informações sobre o maior sistema público de saúde do mundo! 
+        <img src="cartaodosus.jpeg">
     </h2>
     
     <h3> Sua história, organização, legislação, funcionamento e muito mais!
