--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <html> 
 
 <head> 
+      <style> img {width: 185px;}
+      body {font-family: Arial, Helvetica, sans-serif ;}
+      p {color:orangered ;}
+
+      </style>
 </head>
 
 <body>
