--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head> 
       <style> img {width: 185px;}
       body {font-family: Arial, Helvetica, sans-serif ;}
-      p {color:orangered ;}
+      p {color:blue ;}
 
       </style>
 </head>
